<resources>
    <string name="app_name">CourseworkAppProper</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="LogoContentDescription">Company Logo</string>
    <string name="submit">Submit</string>
    <string name="PasswordHint">Enter your password here:</string>
    <string name="UserHint">Enter your username here:</string>
    <string name="OpenNavBar">Open Navigation Bar</string>
    <string name="CloseNavBar">Close Navigation Bar</string>
    <string name="HolsButton">Holiday Management</string>
    <string name="EditButton">Edit Info</string>
    <string name="SettingsButton">Settings</string>
    <string name="NavButtonDescription">Open the navigation tray</string>
    <string name="WelcomeText">Welcome:</string>
    <string name="PleaseSelect">Please select your preferences below</string>
    <string name="SnPFor">Settings and preferences for:</string>
    <string name="CheckboxString">Tick the box to receive push notifications</string>
    <string name="RequestButtonString">Submit New Request</string>
    <string name="Approved">Currently Approved:</string>
    <string name="Requests">Current Requests:</string>
    <string name="DelReq">Delete Request</string>
    <string name="ReqFor">Request for:</string>
    <string name="From">From:</string>
    <string name="To">To:</string>
    <string name="DatePick">Pick Starting Date</string>
    <string name="DatePick2">Pick Ending Date</string>
    <string name="Editing">Editing info for:</string>
    <string name="FirstName">First Name:</string>
    <string name="LastName">Last Name:</string>
    <string name="MiddleNames">Middle Name(s):</string>
    <string name="Gender">Gender:</string>
    <string name="DOB">DOB:</string>
    <string name="JoiningDate">Date of joining company:</string>
    <string name="SelGen">Select Gender</string>
    <string name="SelDOB">Select Date of Birth</string>
    <string name="SelJoin">Select Date of Joining Company</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Approve">Approve</string>
    <string name="Deny">Deny</string>
    <string name="Remove">Remove</string>
    <string name="Users">Users</string>
    <string name="More">More</string>
    <string name="Delete">Delete</string>
    <string name="NewUser">Add New User</string>
    <string name="Or">Or</string>
    <string name="SvNewUser">Save as New User</string>
    <string name="Department">Department</string>
    <string name="Email">Email</string>
    <string name="LeavesRem">Remaining Leave</string>
    <string name="Pass">Password</string>
</resources>