<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestPage">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="79dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/NavButtonDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_menu_24" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="142dp"
        android:layout_height="81dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="94dp"
        android:contentDescription="@string/LogoContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/companylogo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:text="@string/ReqFor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="72dp"
        android:layout_height="43dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="288dp"
        android:text="@string/From"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="56dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="312dp"
        android:text="@string/To"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstDate" />

    <Button
        android:id="@+id/button3"
        android:layout_width="152dp"
        android:layout_height="64dp"
        android:layout_marginBottom="40dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/FirstDate"
        android:layout_width="139dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/DatePick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/LastDate"
        android:layout_width="148dp"
        android:layout_height="63dp"
        android:layout_marginBottom="60dp"
        android:text="@string/DatePick2"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>