<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landingpage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="186dp"
        android:layout_height="103dp"
        android:contentDescription="@string/LogoContentDescription"
        app:srcCompat="@drawable/companylogo"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="75dp"
        android:layout_height="57dp"
        android:contentDescription="@string/NavButtonDescription"
        app:srcCompat="@drawable/baseline_menu_24"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="208dp"
        android:layout_height="59dp"
        android:fontFamily="serif"
        android:text="@string/WelcomeText"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="119dp" />

    <Button
        android:id="@+id/ReqsBtn"
        android:layout_width="247dp"
        android:layout_height="100dp"
        android:text="Requests"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="508dp" />

    <Button
        android:id="@+id/EditButton"
        android:layout_width="251dp"
        android:layout_height="99dp"
        android:text="@string/EditButton"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="282dp" />

    <Button
        android:id="@+id/HolidayButton"
        android:layout_width="270dp"
        android:layout_height="91dp"
        android:text="@string/HolsButton"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="183dp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="259dp"
        android:layout_height="102dp"
        android:text="@string/SettingsButton"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="406dp" />

    <Button
        android:id="@+id/UserBtn"
        android:layout_width="227dp"
        android:layout_height="85dp"
        android:text="All users"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="630dp" />

</androidx.constraintlayout.widget.ConstraintLayout>