<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsPage">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="79dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/NavButtonDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_menu_24" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="142dp"
        android:layout_height="81dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="94dp"
        android:contentDescription="@string/LogoContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="148dp"
        android:layout_height="63dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="48dp"
        android:textStyle="bold"
        android:text="@string/SnPFor"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="177dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:textStyle="bold"
        android:text="@string/PleaseSelect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="34dp"
        android:text="@string/CheckboxString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        app:layout_constraintVertical_bias="1.0" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="289dp"
        android:layout_height="228dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>